<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PGConfiguration</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="title_activity_param">ParamActivity</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="category">Category</string>
    <string name="context">Context</string>
    <string name="parameter">Parameter</string>
    <string name="description">Description</string>
    <string name="extra">Extra</string>
    <string name="api_error">Error whit remote server</string>
    <string name="retry">Error whit remote server. Retry </string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="enter_server">http://host:port</string>
    <string name="action_save">Save</string>
    <string name="action_dump">Dump</string>
    <string name="title_activity_dump">DumpActivity</string>
    <string name="action_share">Share</string>
    <string name="pref_server">Server</string>
    <string name="pref_add_server">Add server</string>
    <string name="pref_chose_server">Chose server</string>
    <string name="pref_filename">File name</string>
    <string name="default_pref_filename">postgresql.conf</string>
    <string name="default_pref_add_server">http://10.0.2.2:8543</string>
    <string name="default_pref_server">http://10.0.2.2:8543</string>

</resources>
