<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditParamActivity" >

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/save" />

    <RelativeLayout
        android:id="@+id/param_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/save_button" >

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:indeterminate="true" />
        
        <TextView
            android:id="@+id/category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/category"
            android:visibility="invisible"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/category_label"
            android:visibility="invisible"
            android:text="@string/category" />

        <TextView
            android:id="@+id/context_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/category_text"
            android:visibility="invisible"
            android:text="@string/context"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/context_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category_text"
            android:layout_toRightOf="@+id/context_label"
            android:visibility="invisible"
            android:text="@string/context" />

        <TextView
            android:id="@+id/parameter_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/context_label"
            android:visibility="invisible"
            android:text="@string/parameter"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/parameter_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parameter_label"
            android:visibility="invisible"
            android:text="@string/parameter" />

        <LinearLayout
            android:id="@+id/value_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parameter_text"
            android:visibility="invisible"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/value_layout"
            android:visibility="invisible"
            android:text="@string/description"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_label"
            android:visibility="invisible"
            android:text="@string/description" />
        <TextView
            android:id="@+id/extra_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_text"
            android:visibility="invisible"
            android:text="@string/extra"  />
    </RelativeLayout>

</RelativeLayout>